--- a/NajdroższeSkiny.html
+++ b/NajdroższeSkiny.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="style/NajdroższeSkiny.css">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width-device-width, initial-scale-1"/>
 	<title>SkinZone - Najdroższe skiny</title>
 </head>
 <body>
@@ -30,11 +31,11 @@
 			<h3>Noże</h3>
 			<p>Lista najdroższych noży:</p><br>
 			<h4>Miejsce 1. M9 Bayonet | Case Hardened Blue Gem (Minimal Wear)<br>Cena 80 260$ = ok. 357 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28696410765"><img src="zdjecia/skiny/m9 bayonet bg mw.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=wiP5tzfSGCc&t=11s"><img src="zdjecia/skiny/m9 bayonet bg mw.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Butterfly Knife | Doppler Sapphire (Factory New)<br>Cena 41 730$ = ok. 186 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=27023930196"><img src="zdjecia/skiny/butterfly knife sapphire fn.png" width="800px"></a><br><br>
+			<a href="hhttps://www.youtube.com/watch?time_continue=19&v=8wFqx9jOYck&embeds_euri=https%3A%2F%2Fwww.google.com%2Fsearch%3Fq%3Dbutterfly%2Bknife%2Bsapphire%2Binspect%26client%3Dopera-gx%26hs%3DGb6%26sxsrf%3DAJOqlzUqdnfqHCWOUJqOs3ZPtiuX4GbtbQ&source_ve_path=Mjg2NjIsMzY4NDIsMjM4NTE&feature=emb_title"><img src="zdjecia/skiny/butterfly knife sapphire fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Talon Knife | Case Hardened Blue Gem (Minimal Wear) <br>Cena 31 800$ = ok. 142 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28632319925"><img src="zdjecia/skiny/talon knife blue gem mw.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=4nP-Q7HOxhM"><img src="zdjecia/skiny/talon knife blue gem mw.png" width="800px"></a><br><br>
 
 		</section>
 		
@@ -42,73 +43,67 @@
 			<h3>Rękawice</h3>
 			<p>Lista najdroższych rękawic:</p><br>
 			<h4>Miejsce 1. Sport Gloves | Pandora's Box (Factory New)<br>Cena 34 703$ = ok. 155 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28331038714"><img src="zdjecia/skiny/pandora fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=UmOoAVhzYTE"><img src="zdjecia/skiny/pandora fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Sport Gloves | Vice (Factory New)<br>Cena 21 994$ = ok. 98 000zł</h4><br>
-            <a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28679650742"><img src="zdjecia/skiny/vice fn.png" width="800px"></a><br><br>
+            <a href="https://www.youtube.com/watch?v=dxy4YZuRhyk"><img src="zdjecia/skiny/vice fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 3. Sport Gloves | Hedge Maze (Factory New)<br>Cena 18 666$ = ok. 83 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=26964386710"><img src="zdjecia/skiny/hedge maze fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=0aROT9lzYPk"><img src="zdjecia/skiny/hedge maze fn.png" width="800px"></a><br><br>
 		</section>
 		
 		<section>
 			<h3>Pistolety</h3>
 			<p>Lista najdroższych pistoletów:</p><br>
 			<h4>Miejsce 1. Glock-18 | Fade (Factory New)<br>Cena 982$ = ok. 4 400zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=8875519039"><img src="zdjecia/skiny/glock fade fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=v-8-qkXWhCw"><img src="zdjecia/skiny/glock fade fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Souvenir Desert Eagle | Hand Cannon (Factory New)<br>Cena 814$ = ok. 3 600zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28555525476"><img src="zdjecia/skiny/sv deagle hand cannon.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=5OxvzS3Xclg"><img src="zdjecia/skiny/sv deagle hand cannon.png" width="800px"></a><br><br>
 			<h4>Miejsce 3. Desert Eagle | Blaze (Factory New)<br>Cena 590$ = ok. 2 600zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=18972298739"><img src="zdjecia/skiny/deagle blaze fn.png" width="800px"></a><br<br>
+			<a href="https://www.youtube.com/watch?v=g9ZFF1C0E1A"><img src="zdjecia/skiny/deagle blaze fn.png" width="800px"></a><br<br>
 		</section>
 		
 		<section>
 			<h3>SMG</h3>
 			<p>Lista najdroższych SMG:</p><br>
 			<h4>Miejsce 1. StatTrak™ P90 | Emerald Dragon (Factory New)<br>Cena 1 673$ = ok. 7 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=24242259647"><img src="zdjecia/skiny/st Emerald Dragon fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=TmoS61tDsF0"><img src="zdjecia/skiny/st Emerald Dragon fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. MP9 | Wild Lily (Factory New)<br>Cena 1 297$ = ok. 6 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28587031580"><img src="zdjecia/skiny/Wild Lily fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=RBQW8lo0Nqo"><img src="zdjecia/skiny/Wild Lily fn.png" width="800px"></a><br><br>
 			<h4>MIejsce 3. MP7 | Whiteout (Factory New)<br>Cena 551$ = ok. 2 500zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28306237331"><img src="zdjecia/skiny/Whiteout fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=HtenIAr8H8Q"><img src="zdjecia/skiny/Whiteout fn.png" width="800px"></a><br><br>
 		</section>
 		
 		<section>
 			<h3>Karabiny</h3>
 			<p>Lista najdroższych karabinów:</p><br>
 			<h4>Miejsce 1. StatTrak™ M4A4 | Howl (Factory New)<br>Cena 12 130$ = ok. 54 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28121350986"><img src="zdjecia/skiny/m4a4 howl fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=i8IF4a8yPy4"><img src="zdjecia/skiny/m4a4 howl fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. AK-47 | Wild Lotus (Factory New)<br>Cena 9 210$ = ok. 41 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28709432316"><img src="zdjecia/skiny/ak47 wild lotus fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=D5me6jVUQrc"><img src="zdjecia/skiny/ak47 wild lotus fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 3. Souvenir AK-47 | Gold Arabesque (Factory New)<br>Cena 4 430$ = ok. 20 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28706541070"><img src="zdjecia/skiny/sv ak47 gold arabesque fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=77bVe3LvymM"><img src="zdjecia/skiny/sv ak47 gold arabesque fn.png" width="800px"></a><br><br>
 		</section>
 		
 		<section>
 			<h3>Karabiny snajperskie</h3>
 			<p>Lista najdroższych karabinów snajperskich:</p><br>
 			<h4>Miejsce 1. Souvenir AWP | Dragon Lore (Factory New)<br>Cena 122 000$ = ok. 545 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=22234634389"><img src="zdjecia/skiny/sv dragon lore fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=P-ZlTAaZzss"><img src="zdjecia/skiny/sv dragon lore fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. AWP | Dragon Lore (Factory New)<br>Cena 9 721$ = ok. 43 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=27058226589"><img src="zdjecia/skiny/dragon lore fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=aY54lTPoWL8"><img src="zdjecia/skiny/dragon lore fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 3. AWP | Gungnir (Factory New)<br>Cena 9 017$ = ok. 40 000zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=27286432277"><img src="zdjecia/skiny/gungir fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=rCWxejGS7Ss"><img src="zdjecia/skiny/gungir fn.png" width="800px"></a><br><br>
 		</section>
 		
 		<section>
 			<h3>Strzelby</h3>
 			<p>Lista najdroższych strzelb:</p>
 			<h4>Miejsce 1. MAG-7 | Cinquedea (Factory New)<br>Cena 698$ = ok. 3 120zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28257532359"><img src="zdjecia/skiny/mag 7 cinquedea fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=BZkyyk9dMb4"><img src="zdjecia/skiny/mag 7 cinquedea fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Souvenir MAG-7 | Bulldozer (Factory New)<br>Cena 274$ = ok. 1 225zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=14536349320"><img src="zdjecia/skiny/sv mag 7 bulldozer fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=SI7TTTOvrZs"><img src="zdjecia/skiny/sv mag 7 bulldozer fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 3. StatTrak™ Nova | Bloomstick (Factory New)<br>Cena 248$ = ok. 1 110zł</h4><br>
-			<a href="https://buff.163.com/market/csgo_inspect/3d?assetid=28495767999"><img src="zdjecia/skiny/st nova bloomstick fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?v=dLvSM1VVD9g&t=11s"><img src="zdjecia/skiny/st nova bloomstick fn.png" width="800px"></a><br><br>
 		</section>
-		
-		<section>
-			<h3>Karabiny maszynowe</h3>
-			<p>Lista najdroższe karabiny maszynowe:</p>
-			<h4>Miejsce 1. Negev | Mjölnir (Factory New)<br>Cena 1 630$ = ok. 6 050zł</h4>
-        </section>
     </main>
     <footer>
         <p>wszystkie informacje dotyczące ceny skinów są z Buff163</p>
