--- a/NajdroższeSkiny.html
+++ b/NajdroższeSkiny.html
@@ -33,7 +33,7 @@
 			<h4>Miejsce 1. M9 Bayonet | Case Hardened Blue Gem (Minimal Wear)<br>Cena 80 260$ = ok. 357 000zł</h4><br>
 			<a href="https://www.youtube.com/watch?v=wiP5tzfSGCc&t=11s"><img src="zdjecia/skiny/m9 bayonet bg mw.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Butterfly Knife | Doppler Sapphire (Factory New)<br>Cena 41 730$ = ok. 186 000zł</h4><br>
-			<a href="hhttps://www.youtube.com/watch?time_continue=19&v=8wFqx9jOYck&embeds_euri=https%3A%2F%2Fwww.google.com%2Fsearch%3Fq%3Dbutterfly%2Bknife%2Bsapphire%2Binspect%26client%3Dopera-gx%26hs%3DGb6%26sxsrf%3DAJOqlzUqdnfqHCWOUJqOs3ZPtiuX4GbtbQ&source_ve_path=Mjg2NjIsMzY4NDIsMjM4NTE&feature=emb_title"><img src="zdjecia/skiny/butterfly knife sapphire fn.png" width="800px"></a><br><br>
+			<a href="https://www.youtube.com/watch?time_continue=19&v=8wFqx9jOYck&embeds_euri=https%3A%2F%2Fwww.google.com%2Fsearch%3Fq%3Dbutterfly%2Bknife%2Bsapphire%2Binspect%26client%3Dopera-gx%26hs%3DGb6%26sxsrf%3DAJOqlzUqdnfqHCWOUJqOs3ZPtiuX4GbtbQ&source_ve_path=Mjg2NjIsMzY4NDIsMjM4NTE&feature=emb_title"><img src="zdjecia/skiny/butterfly knife sapphire fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Talon Knife | Case Hardened Blue Gem (Minimal Wear) <br>Cena 31 800$ = ok. 142 000zł</h4><br>
 			<a href="https://www.youtube.com/watch?v=4nP-Q7HOxhM"><img src="zdjecia/skiny/talon knife blue gem mw.png" width="800px"></a><br><br>
 
