--- a/NajdroższeSkiny.html
+++ b/NajdroższeSkiny.html
@@ -45,7 +45,7 @@
 			<h4>Miejsce 1. Sport Gloves | Pandora's Box (Factory New)<br>Cena 34 703$ = ok. 155 000zł</h4><br>
 			<a href="https://www.youtube.com/watch?v=UmOoAVhzYTE"><img src="zdjecia/skiny/pandora fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 2. Sport Gloves | Vice (Factory New)<br>Cena 21 994$ = ok. 98 000zł</h4><br>
-            		<a href="https://www.youtube.com/watch?v=dxy4YZuRhyk"><img src="zdjecia/skiny/vice fn.png" width="800px"></a><br><br>
+            <a href="https://www.youtube.com/watch?v=dxy4YZuRhyk"><img src="zdjecia/skiny/vice fn.png" width="800px"></a><br><br>
 			<h4>Miejsce 3. Sport Gloves | Hedge Maze (Factory New)<br>Cena 18 666$ = ok. 83 000zł</h4><br>
 			<a href="https://www.youtube.com/watch?v=0aROT9lzYPk"><img src="zdjecia/skiny/hedge maze fn.png" width="800px"></a><br><br>
 		</section>
@@ -104,9 +104,9 @@
 			<h4>Miejsce 3. StatTrak™ Nova | Bloomstick (Factory New)<br>Cena 248$ = ok. 1 110zł</h4><br>
 			<a href="https://www.youtube.com/watch?v=dLvSM1VVD9g&t=11s"><img src="zdjecia/skiny/st nova bloomstick fn.png" width="800px"></a><br><br>
 		</section>
+		<footer>
+			<p>WSZYSTKIE INFORMACJE DOTYCZĄCE CENY SKINÓW SĄ Z BUFF163</p>
+		</footer>    
     </main>
-    <footer>
-        <p>wszystkie informacje dotyczące ceny skinów są z Buff163</p>
-    </footer>    
 </body>
 </html>
